--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <h1>Minion Lang</h1>
-   
+   <textarea class="textArea" placeholder="Enter the Text to translate it to Minion Lang "></textarea>
+   <button class="translateBtn">translate</button>
 </body>
 </html>
