type error: null  resolved

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    
 </head>
 <body>
-   <h1>Minion Lang</h1>
-   <textarea class="textArea" placeholder="Enter the Text to translate it to Minion Lang "></textarea>
-   <button class="translateBtn">translate</button>
+   <h1 class="header">Minion Lang</h1>
+   <textarea id="textAreaToTranslate"  placeholders=" put your sentence in English here and we will convert it to banana ">
+</textarea >
+   <button id="translateBtn"> Translate </button >
+   
+   <textarea class="textAreaTranslated" ></textarea>
 </body>
+<script src="script.js"></script>
 </html>
