project Completed with all fetures

--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
-</head>
-<body>
-   <h1 class="header">Minion Lang</h1>
-   <textarea id="textAreaToTranslate"  placeholders=" put your sentence in English here and we will convert it to banana ">
-</textarea >
-   <button id="translateBtn"> Translate </button >
-   
-   <textarea class="textAreaTranslated" ></textarea>
-</body>
-<script src="script.js"></script>
+  </head>
+  <body>
+    <h1 class="header">
+      <img
+        src="https://i.etsystatic.com/34768582/r/il/5f9b59/3815624290/il_340x270.3815624290_m7ko.jpg"
+      />Minion Lang
+    </h1>
+    <div class="container">
+      <div class="TranslateArea">
+        <textarea
+          id="textAreaToTranslate"
+          placeholder=" Type in English and we will convert it to Minion Lang"
+        ></textarea>
+
+        <button id="translateBtn">Translate</button>
+
+        <div class="outputBoxText">
+          Your Translated text will get displayed Here👇
+        </div>
+        <div class="textAreaTranslated">
+          <p>hello</p>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script src="script.js"></script>
 </html>
