fix: TranslatedTextBox fixed

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <div class="outputBoxText">
           Your Translated text will get displayed Here👇
         </div>
-        <div class="textAreaTranslated">
-          <p>hello</p>
-        </div>
+        <div class="textAreaTranslated"></div>
       </div>
     </div>
   </body>
